<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearLayout1"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"

              android:gravity="center|center_horizontal"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="40dp">


        <TextView
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowRadius="5"
                android:text="@string/optionsString"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">


        <Button
                android:id="@+id/deleteBtn"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/deleteString"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/editBtn"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/editString"
                android:textColor="@color/white"
                android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>