<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearLayout1"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="center"
              android:gravity="center|center_horizontal"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/newMonthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:paddingBottom="40dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="5"
                    android:shadowRadius="5"
                    android:text="@string/found_its_a_new_month"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/Yes"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:background="@drawable/list_selector"
                    android:gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/No"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/list_selector"
                    android:gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>